deploy/k8s/deployments.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: authentication
    spec:
      containers:
      - name: authentication
        image: thomasraynal/azureplayground.authentication:v1
        ports:
          - containerPort: 80
          - containerPort: 443
        imagePullPolicy : Always
      - name: mongo
        image: mongo
        ports:
          - containerPort: 27017
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: gateway
    spec:
      containers:
      - name: gateway
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.gateway:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: consul
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: consul
    spec:
      containers:
      - name: consul
        ports:
          - containerPort: 8500
        image: consul  
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: trade1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: trade
        id: trade1
    spec:
      containers:
      - name: trade1
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.trade.service:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: market1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: market
        id: market1
    spec:
      containers:
      - name: market1
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.market.service:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: compliance1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: compliance
        id: compliance1
    spec:
      containers:
      - name: compliance1
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.compliance.service:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: price1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: price
        id: price1
    spec:
      containers:
      - name: price1
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.price.service:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: event1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: event
        id: event1
    spec:
      containers:
      - name: event1
        ports:
          - containerPort: 80
          - containerPort: 443
        image: thomasraynal/azureplayground.trade.event.service:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: eventstore
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: eventstore
    spec:
      containers:
      - name: eventstore
        image: eventstore/eventstore:release-5.0.0
        ports:
        - containerPort: 2113
        - containerPort: 1113    
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: generator
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: generator
    spec:
      containers:
      - name: generator
        image: thomasraynal/azureplayground.trade.generator:v1
        imagePullPolicy : Always
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: azureplayground
        component: app
    spec:
      containers:
      - name: app
        image: thomasraynal/azureplayground.web.app:v1
        imagePullPolicy : Always
