deploy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: authentication
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: gateway
---
apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  type: NodePort
  ports:
  - name: c1
    port: 8500
  selector:
    app: azureplayground
    component: consul
---
apiVersion: v1
kind: Service
metadata:
  name: eventstore
spec:
  type: NodePort
  ports:
  - name: ev1
    port: 2113
  - name: ev2
    port: 1113
  selector:
    app: azureplayground
    component: eventstore
---
apiVersion: v1
kind: Service
metadata:
  name: price
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: price
---
apiVersion: v1
kind: Service
metadata:
  name: event
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: event
---
apiVersion: v1
kind: Service
metadata:
  name: trade
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: trade
---
apiVersion: v1
kind: Service
metadata:
  name: compliance
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: compliance
---
apiVersion: v1
kind: Service
metadata:
  name: market
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  selector:
    app: azureplayground
    component: market
