deploy/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: azureplayground
  name: azureplayground-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   nginx.ingress.kubernetes.io/affinity: cookie
  #   nginx.ingress.kubernetes.io/session-cookie-hash: sha1
  #   nginx.ingress.kubernetes.io/session-cookie-name: REALTIMESERVERID
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: gateway
            servicePort: 80
        - path: /app
          backend:
            serviceName: app
            servicePort: 80
        - path: /authentication/*
          backend:
            serviceName: authentication
            servicePort: 80
